# aggregator

./: ARCHITECTURE.md  Cargo.toml  README.md  flake.nix  skills.md
examples/: collect.nota  configuration.nota  output-interface-replies.nota  output-interface-requests.nota  session-inventory-archive-requests.nota  transcript-block-search-replies.nota  transcript-block-search-requests.nota
schema/: runtime.schema
src/: adapter.rs  archive.rs  client.rs  clock.rs  configuration.rs  daemon.rs  derived_paths.rs  error.rs  lib.rs  local_default_configuration.rs  nexus.rs  output_index.rs  sema.rs  signal.rs  time_model.rs
src/adapter/: claude.rs  codex.rs  pi.rs  repository.rs
src/output_index/: build.rs  cursor.rs  instrumentation.rs  limits.rs  migration_v2.rs  reconciliation.rs  schema.rs  store.rs
tests/: adapter_scan.rs  boundary.rs  bounded_backing_line.rs  output_index_build.rs  output_index_instrumentation.rs  output_index_migration.rs  output_index_store.rs  typed_projection_schema.rs
tests/fixtures/claude-parent/: session-uuid.jsonl
tests/fixtures/claude-subagents/claude-session-uuid/: task-1.output
