[package]
name         = "aggregator"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/aggregator"
description  = "Aggregator evidence collection daemon and CLI scaffold."
publish      = false

[lib]
name = "aggregator"
path = "src/lib.rs"

[[bin]]
name = "aggregator-daemon"
path = "src/bin/aggregator-daemon.rs"

[[bin]]
name = "aggregator"
path = "src/bin/aggregator.rs"

[[bin]]
name = "meta-aggregator"
path = "src/bin/meta-aggregator.rs"

[[bin]]
name = "aggregator-write-configuration"
path = "src/bin/aggregator-write-configuration.rs"

[dependencies]
meta-signal-aggregator = { git = "https://github.com/LiGoldragon/meta-signal-aggregator", branch = "main", features = ["nota-text"] }
nota                   = { package = "nota", git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
serde_json             = "1"
signal-aggregator      = { git = "https://github.com/LiGoldragon/signal-aggregator", branch = "main", features = ["nota-text"] }
thiserror              = "2"
time                   = { version = "0.3", features = ["formatting", "parsing"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = { level = "warn", priority = -1 }
